istio/istio-deepdive/depl-helloworld.yaml
###############
# destination v1 
###############
apiVersion: v1
kind: Service
metadata:
  name: dest-svc-v1
  namespace: application
  labels:
    app: hw-v1
spec:
  selector:
    app: hw-v1
  ports:
    - port: 7777
      name: "http-v1"
      targetPort: 5678
      protocol: TCP
      nodePort: 30001
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dest-depl-v1
  namespace: application
  labels:
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hw-v1
      version: v1
  template:
    metadata:
      labels:
        app: hw-v1
        version: v1
    spec:
      containers:
        - name: dest-countainer-v1
          image: hashicorp/http-echo
          args:
            - "-text=Hello World V1 from dest-depl-v1"
          ports:
            - containerPort: 7777
---
###############
# destination v2
###############
apiVersion: v1
kind: Service
metadata:
  name: dest-svc-v2
  namespace: application
  labels:
    app: hw-v2
spec:
  selector:
    app: hw-v2
  ports:
    - port: 7777
      name: "http-v2"
      targetPort: 5678
      protocol: TCP
      nodePort: 30002
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dest-depl-v2
  namespace: application
  labels:
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hw-v2
      version: v2
  template:
    metadata:
      labels:
        app: hw-v2
        version: v2
    spec:
      containers:
        - name: dest-countainer-v1
          image: hashicorp/http-echo
          args:
            - "-text=Hello World V2 from dest-depl-v2"
          ports:
            - containerPort: 7777
---
###############
# 404 error page
###############
apiVersion: v1
kind: Service
metadata:
  name: dest-svc-error
  namespace: application
  labels:
    app: error-page
spec:
  selector:
    app: error-page
  ports:
    - port: 7777
      name: "http-error"
      targetPort: 5678
      protocol: TCP
      nodePort: 30003
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dest-error-depl
  namespace: application
  labels:
    version: v3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: error-page
      version: v3
  template:
    metadata:
      labels:
        app: error-page
        version: v3
    spec:
      containers:
        - name: dest-countainer-v3
          image: hashicorp/http-echo
          args:
            - "-text=ERROR 404"
          ports:
            - containerPort: 7777
