istio/istio-deepdive/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-istio-ingress-gw
  namespace: application
spec:
  selector:
    istio: ingressgateway # use istio default controller If Helm > "istio:ingress"
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.yuya.com"
    - "example.com"
